fixed all the formatting/layout issues, added to lab 3.2 text

--- a/team/css/style.css
+++ b/team/css/style.css
@@ -13,18 +13,21 @@
     text-align: center;
 }
 
-.navigation-bar {
-    margin: 0;
-    ul {
-        background-color: #333;
-    }
+.navigation-bar li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    float: left;
 }
 
-ul {
+.navigation-bar ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    background-color: #333;
 }
 #content {
     h1 {
@@ -41,17 +44,7 @@ ul {
     text-align:center;
     background-color:rgb(0, 0, 0);
 }
-li {
-    float: left;
-}
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
 
 /* Change the link color to #111 (black) on hover */
 li a:hover {
